# chop-and-drop

./: .gitignore  Chop & Drop.desktop  LICENSE  README.md  chop_and_drop.py  pyproject.toml  requirements.txt  run.sh
docs/: mounting-external-drives.md
